--- a/bin/main/config.properties
+++ b/bin/main/config.properties
@@ -1,10 +1,11 @@
-id_cabina=1
+id_cabina=112
 host=192.168.1.200
-ip_destino=http://151.106.109.37:5000/
-server_password=KxZVM@&0$SOx_1
-server_username=1
-log_path=log.txt
-log_max_size=570
+ip_destino=http://190.12.101.198:5000/
+server_password=KxZVM@&0$SOx_112
+server_username=112
+log_path=/home/user/LECTOR_RFID/log.txt
+#116 por cada lectura
+log_max_size=5700
 mail_cuenta=lector.antena.mail@gmail.com
 mail_password=bVb56XSm6c7PSrj
 mail_destino=lector.antena.mail@gmail.com
